--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-             width: 400px;
-        }
-         .loading {
-            display: none;
-             margin: 10px 0;
-            font-style: italic;
-             color: grey;
-
+            width: 400px;
         }
         input[type="text"] {
             padding: 10px;
@@ -54,25 +47,25 @@
     <div class="container">
         <h1>YouTube Video Downloader</h1>
         <input type="text" id="videoUrl" placeholder="Enter YouTube video URL">
-        <button id = "downloadButton">Download Video</button>
-        <p class = "loading" id = "loadingMessage">Загрузка...</p>
+        <button id="downloadButton">Download Video</button>
     </div>
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready();
+
         const button = document.getElementById('downloadButton');
-        const loadingMessage = document.getElementById('loadingMessage');
 
         button.addEventListener('click', () => {
-           const videoUrl = document.getElementById('videoUrl').value;
-           if (videoUrl) {
-                loadingMessage.style.display = 'block';
-                tg.sendData(videoUrl);
+            const videoUrl = document.getElementById('videoUrl').value;
+            if (videoUrl) {
                 tg.MainButton.text = "Отправляю ссылку боту...";
                 tg.MainButton.show();
-                console.log('Ссылка отправлена: ', videoUrl);
-             } else {
-                tg.showAlert("Пожалуйста, введите ссылку на видео.");
+                console.log('Отправляю ссылку боту:', videoUrl);
+                 setTimeout(() => {
+                    tg.sendData(videoUrl);
+                }, 500);
+            } else {
+              tg.showAlert("Пожалуйста, введите ссылку на видео.");
                 console.log('Ошибка: Пустая ссылка');
             }
         });
