--- a/index.html
+++ b/index.html
@@ -9,17 +9,28 @@
     <h1>Test Mini App</h1>
     <button id="testButton">Send Test Data</button>
     <script>
+        console.log("JavaScript начал выполняться.");
+
         const tg = window.Telegram.WebApp;
         tg.ready();
+        console.log("Telegram WebApp API ready.");
+
         const testButton = document.getElementById('testButton');
-        testButton.addEventListener('click', function() {
-             tg.MainButton.text = 'Отправка...';
-              tg.MainButton.show();
-              setTimeout(() => {
-                    tg.sendData('test_data');
-                    console.log('Данные отправлены: test_data');
-                 }, 500);
-         });
+         console.log("Кнопка найдена:", testButton);
+
+        if (testButton) {
+            testButton.addEventListener('click', function() {
+                console.log("Кнопка нажата.");
+                tg.MainButton.text = 'Отправка...';
+                tg.MainButton.show();
+                 setTimeout(() => {
+                      tg.sendData('test_data');
+                       console.log('Данные отправлены: test_data');
+                   }, 500);
+             });
+        } else {
+            console.error("Ошибка: Кнопка не найдена");
+        }
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
