--- a/index.html
+++ b/index.html
@@ -11,28 +11,41 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         console.log("JavaScript начал выполняться.");
-        window.onload = function () {
-            const tg = window.Telegram.WebApp;
-             console.log("Telegram WebApp API ready.");
-            tg.ready();
 
-            const testButton = document.getElementById('testButton');
-            console.log("Кнопка найдена:", testButton);
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('DOMContentLoaded event fired');
 
-            if (testButton) {
-                testButton.addEventListener('click', function() {
-                   console.log("Кнопка нажата.");
-                    tg.MainButton.text = 'Отправка...';
-                    tg.MainButton.show();
-                    setTimeout(() => {
-                        tg.sendData('test_data');
-                        console.log('Данные отправлены: test_data');
-                   }, 500);
-                });
-           } else {
-                console.error("Ошибка: Кнопка не найдена");
-            }
-        }
+             function initializeWebApp() {
+                 if (window.Telegram && window.Telegram.WebApp) {
+                     console.log("Telegram WebApp API ready.");
+                     const tg = window.Telegram.WebApp;
+                     tg.ready();
+
+                     const testButton = document.getElementById('testButton');
+                     console.log("Кнопка найдена:", testButton);
+
+                     if (testButton) {
+                         testButton.addEventListener('click', function() {
+                              console.log("Кнопка нажата.");
+                             tg.MainButton.text = 'Отправка...';
+                             tg.MainButton.show();
+                             setTimeout(() => {
+                                  tg.sendData('test_data');
+                                   console.log('Данные отправлены: test_data');
+                                 }, 500);
+                         });
+                    } else {
+                         console.error("Ошибка: Кнопка не найдена");
+                    }
+                }
+              else{
+                   console.log("Telegram WebApp not ready yet, retrying in 100ms");
+                setTimeout(initializeWebApp, 100);
+                 }
+             }
+              initializeWebApp();
+        });
+
     </script>
 </body>
 </html>
